add icons to personalView.html for local view

--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -53,7 +53,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span th:text="${eventAndStatus.key.getDeadlineDate()}">&nbsp;13.03.2020</span>
                                 <span th:text="${eventAndStatus.key.getDeadlineTime()}">&nbsp;19:30</span>
@@ -63,7 +64,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">
                                     <span th:if="${eventAndStatus.key.type == 'Abendveranstaltung'}">
                                     &nbsp;<sup>1</sup>/<sub>6</sub>&nbsp;CP</span>
@@ -148,7 +150,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span>&nbsp;13.03.2020</span>
                             </div>
@@ -157,7 +160,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
@@ -194,7 +198,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span>&nbsp;13.03.2020</span>
                             </div>
@@ -203,7 +208,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
@@ -240,7 +246,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span class="text-danger">&nbsp;05.03.2020</span>
                             </div>
@@ -249,7 +256,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
@@ -285,7 +293,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span>&nbsp;05.03.2020</span>
                             </div>
@@ -294,7 +303,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
@@ -330,7 +340,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span>&nbsp;05.03.2020</span>
                             </div>
@@ -339,7 +350,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-success">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
