--- a/src/main/resources/templates/orga_events_overview.html
+++ b/src/main/resources/templates/orga_events_overview.html
@@ -17,7 +17,9 @@
                 <a th:href="@{/rheinjug2/orga/events}"> Veranstaltungen Übersicht </a>
             </li>
             <li>
-                <a th:href="@{/rheinjug2/orga/reports}"> Bewertung Anfragen </a>
+                <a class="col-12" th:href="@{/rheinjug2/orga/reports}"> Bewertung Anfragen &emsp; &emsp;
+                    <span class=" badge badge-primary badge-pill" th:text="${numberOfEvaluationRequests}">14</span>
+                </a>
             </li>
             <li>
                 <a th:href="@{/rheinjug2/orga/delayedSubmission}"> Verspätete Abgabe hochladen </a>
