--- a/src/main/resources/templates/credit_points_form.html
+++ b/src/main/resources/templates/credit_points_form.html
@@ -12,7 +12,7 @@
               th:remove="all">
         <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-                th:src="@{/js/bootstrap.min.js}" th:remove="all"></script>
+                th:src="@{/js/bootstrap.min.js}"></script>
     </th:block>
 </head>
 <body>
