--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -6,6 +6,11 @@
     <title>Name des Subsystems</title>
     <th:block th:fragment="headcontent">
         <!-- Links, Skripts, Styles hier einfügen! -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+              crossorigin="anonymous"
+              th:remove="all">
+        <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
         <link rel="stylesheet" href="../static/css/main.css" th:href="@{/css/main.css}">
     </th:block>
 
@@ -48,7 +53,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span th:text="${eventAndStatus.key.getDeadlineDate()}">&nbsp;13.03.2020</span>
                                 <span th:text="${eventAndStatus.key.getDeadlineTime()}">&nbsp;19:30</span>
@@ -58,12 +64,13 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">
-                                    <span th:if="${eventAndStatus.key.type == 'Abendveranstaltungen'}">
+                                    <span th:if="${eventAndStatus.key.type == 'Abendveranstaltung'}">
                                     &nbsp;<sup>1</sup>/<sub>6</sub>&nbsp;CP</span>
                                     </span>
-                                <span th:if="${eventAndStatus.key.type == 'Entwickelbar'}">
+                                <span th:if="${eventAndStatus.key.type == 'EntwickelBar'}">
                                     &nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                                 </span>
                             </div>
@@ -143,7 +150,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span>&nbsp;13.03.2020</span>
                             </div>
@@ -152,7 +160,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
@@ -189,7 +198,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span>&nbsp;13.03.2020</span>
                             </div>
@@ -198,7 +208,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
@@ -235,7 +246,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span class="text-danger">&nbsp;05.03.2020</span>
                             </div>
@@ -244,7 +256,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
@@ -280,7 +293,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span>&nbsp;05.03.2020</span>
                             </div>
@@ -289,7 +303,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
@@ -325,7 +340,8 @@
                     <div class="col-12 col-sm-4 border-right text-secondary my-1">
                         <div class="row">
                             <div class="col-12">
-                                <img src="/icons/icon-time-clock.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-time-clock.png"
+                                     th:src="@{/icons/icon-time-clock.png}" style="width: 32px;height: 28px;">
                                 <span>&nbsp;Abgabefrist</span>
                                 <span>&nbsp;05.03.2020</span>
                             </div>
@@ -334,7 +350,8 @@
                     <div class="col-12 col-sm-4  my-1">
                         <div class="row ">
                             <div class="col-12">
-                                <img src="/icons/icon-credit-points.png" style="width: 32px;height: 28px;">
+                                <img src="../../static/icons/icon-credit-points.png"
+                                     th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-success">&nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
                             </div>
                         </div>
