--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -21,7 +21,7 @@
         <!-- Navigation als ungeordnete Liste mit einfachen Links hier einfügen! -->
         <ul>
             <li>
-                <a th:href="@{/rheinjug2/student/events}" href="/home"> Veranstaltugen Übersicht </a>
+                <a th:href="@{/rheinjug2/student/events}" href="/home"> Veranstaltungen Übersicht </a>
             </li>
             <li class="active">
                 <a th:href="@{/rheinjug2/student/visitedevents}" href="/rheinjug2/student/personal">
@@ -90,7 +90,7 @@
                             <div class="col-12 mt-2">
                                 <a class="btn btn-outline-success btn-block" href="/rheinjug2/student/reportsubmit"
                                    role="button"
-                                   th:href="@{/rheinjug2/student/reportsubmit(eventId=${eventAndStatus.key.id})}">>
+                                   th:href="@{/rheinjug2/student/reportsubmit(eventId=${eventAndStatus.key.id})}">
                                     Zusammenfassung abgeben
                                 </a>
                             </div>
