Add test data and fix date in report_submit

--- a/src/main/resources/templates/report_submit.html
+++ b/src/main/resources/templates/report_submit.html
@@ -68,8 +68,9 @@
                           form="mysubmit"></textarea>
             </div>
             <div class="form-group secondary">
-                <label class="" for="Todaysdate">Datum der Abgabe</label>
-                <input type="text" class="form-control " id="Todaysdate" th:field="*{date}" value="01.04.2020" readonly>
+                <label class="" for="Todaysdate">heutige datum</label>
+                <input th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy')}" type="text" class="form-control "
+                       id="Todaysdate" value="01.04.2020" readonly>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-outline-success">Zusammenfassung hochladen</button>
