--- a/src/main/resources/templates/report_submit.html
+++ b/src/main/resources/templates/report_submit.html
@@ -69,7 +69,8 @@
             </div>
             <div class="form-group secondary">
                 <label class="" for="Todaysdate">heutige datum</label>
-                <input type="text" class="form-control " id="Todaysdate" value="01.04.2020" readonly>
+                <input th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy')}" type="text" class="form-control "
+                       id="Todaysdate" value="01.04.2020" readonly>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-outline-success">Zusammenfassung hochladen</button>
