fix current date - submit a summary

--- a/src/main/resources/templates/report_submit.html
+++ b/src/main/resources/templates/report_submit.html
@@ -69,7 +69,7 @@
             </div>
             <div class="form-group secondary">
                 <label class="" for="Todaysdate">heutige datum</label>
-                <input th:text="${#dates.format(#dates.createNow(), 'dd MMM yyyy')}" type="text" class="form-control "
+                <input th:value="${#dates.format(#dates.createNow(), 'dd MMM yyyy')}" type="text" class="form-control "
                        id="Todaysdate" value="01.04.2020" readonly>
             </div>
             <div class="form-group">
