--- a/src/main/resources/templates/report_submit.html
+++ b/src/main/resources/templates/report_submit.html
@@ -68,7 +68,7 @@
                           form="mysubmit"></textarea>
             </div>
             <div class="form-group secondary">
-                <label class="" for="Todaysdate">heutige datum</label>
+                <label class="" for="Todaysdate">Heutiges Datum</label>
                 <input th:value="${#dates.format(#dates.createNow(), 'dd MMM yyyy')}" type="text" class="form-control "
                        id="Todaysdate" value="01.04.2020" readonly>
             </div>
@@ -84,7 +84,8 @@
             </a>
         </div>
     </div>
-    <h2 class="text-center text-secondary"> Lade deine Zusammenfassung hoch </h2>
+    <h2 class="text-center text-secondary font-weight-bolder"> oder lade deine Zusammenfassung hoch </h2>
+    <i class="fa fa-arrow-down"></i>
     <div class="container bg-light rounded shadow-lg text-secondary "
          style=" padding: 10px; margin-top: 40px; margin-bottom: 50px">
         <div class="form-group">
