--- a/src/main/resources/templates/orga_events_overview.html
+++ b/src/main/resources/templates/orga_events_overview.html
@@ -73,7 +73,7 @@
                 <div class="col-12 col-sm-6 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
-                            <span>Anzahl angemeldte Studenten:&nbsp;</span>
+                            <span>Anzahl angemeldeter Studenten:&nbsp;</span>
                             <span class="text-success" th:text="${event.getNumberOfStudent()}"
                                   th:classappend="${event.getNumberOfStudent() > 0} ? text-success : text-danger">15</span>
                         </div>
@@ -82,7 +82,7 @@
                 <div class="col-12 col-sm-6 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
-                            <span>Anzahl abgegebene Zusammenfassungen:&nbsp;</span>
+                            <span>Anzahl abgegebener Zusammenfassungen:&nbsp;</span>
                             <span class="text-success" th:text="${event.getNumberOfSubmition()}"
                                   th:classappend="${event.getNumberOfSubmition() > 0} ? text-success : text-danger">11</span>
                         </div>
@@ -122,7 +122,7 @@
                 <div class="col-12 col-sm-6 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
-                            <span>Anzahl angemeldte Studenten:&nbsp;</span>
+                            <span>Anzahl angemeldeter Studenten:&nbsp;</span>
                             <span class="text-success">4</span>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                 <div class="col-12 col-sm-6 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
-                            <span>Anzahl abgegebene Zusammenfassungen:&nbsp;</span>
+                            <span>Anzahl abgegebener Zusammenfassungen:&nbsp;</span>
                             <span class="text-danger">0</span>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                 <div class="col-12 col-sm-6 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
-                            <span>Anzahl angemeldte Studenten:&nbsp;</span>
+                            <span>Anzahl angemeldeter Studenten:&nbsp;</span>
                             <span class="text-danger">0</span>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                 <div class="col-12 col-sm-6 border-right text-secondary my-1">
                     <div class="row">
                         <div class="col-12">
-                            <span>Anzahl abgegebene Zusammenfassungen:&nbsp;</span>
+                            <span>Anzahl abgegebener Zusammenfassungen:&nbsp;</span>
                             <span class="text-danger">0</span>
                         </div>
                     </div>
