change cp into event type and price into email for jens
Co-authored-by: pascal2707 <pascal.meinhard@gmx.de>

--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -23,4 +23,12 @@
 
 </main>
 </body>
-</html>
+</html><span class="text-secondary">
+                                <span th:if="${event.type == 'Abendveranstaltung'}">
+                                    Abendveranstaltung
+                                </span>
+                                <span th:if="${event.type == 'EntwickelBar'}">
+                                    EntwickelBar
+                                </span>
+                                <span th:if="${event.type != 'Abendveranstaltung' and event.type != 'EntwickelBar'}"> unbekanntes Event </span>
+                            </span>
