--- a/src/main/resources/templates/personalView.html
+++ b/src/main/resources/templates/personalView.html
@@ -46,7 +46,7 @@
                             <div class="col-12">
                                 <i class="icono-calendar"></i>
                                 <span class="text-success"
-                                      th:text="${#temporals.format(eventAndStatus.key.date.toLocalDate(), 'yyyy.MM.dd')}">&nbsp;13.03.2020</span>
+                                      th:text="${#temporals.format(eventAndStatus.key.date.toLocalDate(), 'dd.MM.YYYY')}">&nbsp;13.03.2020</span>
                             </div>
                         </div>
                     </div>
@@ -68,10 +68,10 @@
                                      th:src="@{/icons/icon-credit-points.png}" style="width: 32px;height: 28px;">
                                 <span class="text-secondary">
                                     <span th:if="${eventAndStatus.key.type == 'Abendveranstaltung'}">
-                                    &nbsp;<sup>1</sup>/<sub>6</sub>&nbsp;CP</span>
+                                    &nbsp;Abendveranstaltung
                                     </span>
                                 <span th:if="${eventAndStatus.key.type == 'EntwickelBar'}">
-                                    &nbsp;<sup>1</sup>/<sub>2</sub>&nbsp;CP</span>
+                                    &nbsp;EntwickelBar
                                 </span>
                             </div>
                         </div>
