--- a/src/main/resources/templates/student_events_overview.html
+++ b/src/main/resources/templates/student_events_overview.html
@@ -61,7 +61,8 @@
     <h1 class="text-center text-secondary"> Rheinjug Veranstaltungen </h1>
     <div id="partial-collapse" th:remove="all-but-first">
 
-        <div class="container bg-light rounded shadow-lg " th:each="event : ${events}" style="padding: 10px; margin-top: 40px; margin-bottom: 50px">
+        <div class="container bg-light rounded shadow-lg " th:each="event : ${events}"
+             style="padding: 10px; margin-top: 40px; margin-bottom: 50px">
             <div class="row border-bottom mx-1 my-1">
                 <div class="col-6 col-sm-3 border-right text-secondary my-1">
                     <div class="row">
@@ -87,12 +88,12 @@
                                  style="width: 32px;height: 28px;">
                             <span class="text-secondary">
                                 <span th:if="${event.type == 'Abendveranstaltung'}">
-                                    <sup>1</sup>/<sub>6</sub> CP
+                                    Abendveranstaltung
                                 </span>
                                 <span th:if="${event.type == 'EntwickelBar'}">
-                                    <sup>1</sup>/<sub>2</sub> CP
+                                    EntwickelBar
                                 </span>
-                                <span th:if="${event.type != 'Abendveranstaltung' and event.type != 'EntwickelBar'}"> <sup>1</sup>/<sub>2</sub> CP </span>
+                                <span th:if="${event.type != 'Abendveranstaltung' and event.type != 'EntwickelBar'}"> unbekanntes Event </span>
                             </span>
                         </div>
                     </div>
@@ -103,8 +104,10 @@
                             <img src="../../static/icons/icon-payment.png"
                                  th:src="@{/icons/icon-payment.png}"
                                  style="width: 32px;height: 28px;">
-                            <span class="text-success" th:if="${event.price == 0}">kostenfrei</span>
-                            <span th:if="${event.price != 0}" th:text="${event.price} + ' €' "> 5.0 €</span>
+                            <span class="text-success" th:if="${event.price == 0}"> kostenfrei</span>
+                            <span th:if="${event.price != 0}">
+                                    <td><a th:href="'mailto: bendisposto@uni-duesseldorf.de'"> Bei Jens anmelden</a></td>
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -124,7 +127,8 @@
                         </h3>
                     </div>
                     <div class="text-secondary">
-                        <div id="description-1" th:id="'description-' + ${event.id}" class="collapse partial-collapse" aria-expanded="false">
+                        <div id="description-1" th:id="'description-' + ${event.id}" class="collapse partial-collapse"
+                             aria-expanded="false">
                             <!-- Jens allowed us to use utext explicitly -->
                             <div class="text-secondary" th:utext="${event.description}">
                                 <p>
@@ -134,7 +138,8 @@
                                     (JSP)
                                     und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die
                                     Anforderungen
-                                    an moderne und verteilte Systeme kaum erfüllen könn´en. Mit der actionbasierten MVC API
+                                    an moderne und verteilte Systeme kaum erfüllen könn´en. Mit der actionbasierten MVC
+                                    API
                                     1.0
                                     soll
                                     dieses Problem gelöst werden.
@@ -378,7 +383,8 @@
                                     Server Pages (JSP)
                                     und Java Server Faces (JSF). Beide Technologien folgen Paradigmen, welche die
                                     Anforderungen
-                                    an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC API
+                                    an moderne und verteilte Systeme kaum erfüllen können. Mit der actionbasierten MVC
+                                    API
                                     1.0 soll dieses Problem gelöst werden.
                                 </p>
                             </div>
