--- a/src/main/resources/templates/orga_events_overview.html
+++ b/src/main/resources/templates/orga_events_overview.html
@@ -6,6 +6,11 @@
     <title>Name des Subsystems</title>
     <th:block th:fragment="headcontent">
         <!-- Links, Skripts, Styles hier einfügen! -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+              crossorigin="anonymous"
+              th:remove="all">
+        <link rel="stylesheet" href="https://icono-49d6.kxcdn.com/icono.min.css" th:remove="all">
     </th:block>
 </head>
 <body>
@@ -30,7 +35,7 @@
 <main th:fragment="bodycontent">
     <!-- Restlichen Inhalt hier einfügen! -->
     <form action="#" method="POST" th:action="@{/rheinjug2/orga/events}">
-        <button class="btn btn-outline-secondary btn-block" type="submit">
+        <button class="btn btn-outline-primary" type="submit">
             Veranstaltungen aktualisieren
         </button>
     </form>
